# ai_llm

./: Cargo.toml  README.md  ops.sh
src/: chat_session.rs  cli.rs  completion.rs  config.rs  interactive.rs  main.rs  markdown_render.rs  mic.rs  sse_event.rs
src/tools/: build_release.rs  mod.rs
